--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "engines": {
+    "node": "15.8.0"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
